# tar

./: README.md  docker-compose.yaml
.github/workflows/: release.yml
backend/: .gitignore  CODE_QUALITY.md  CONFIG.md  Dockerfile  README.md  config.toml  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/api/: auth.py  chat.py  files.py  models.py  sessions.py
backend/app/services/: agent.py  ddgs_client.py  explore.py  file_handler.py  llm.py  playwright_client.py  tool_registry.py  tools.py
backend/app/utils/: helpers.py
backend/typings/PIL/: __init__.pyi
backend/typings/ddgs/: __init__.pyi  exceptions.pyi
backend/typings/fastapi/: __init__.pyi
backend/typings/fastapi/responses/: __init__.pyi
backend/typings/fastapi/security/: __init__.pyi
backend/typings/jose/: __init__.pyi  jwt.pyi
backend/typings/openai/: __init__.pyi
backend/typings/passlib/: __init__.pyi  context.pyi
backend/typings/pdf2image/: __init__.pyi
backend/typings/playwright/: __init__.pyi
backend/typings/playwright/sync_api/: __init__.pyi
backend/typings/pydantic/: __init__.pyi
backend/typings/sqlalchemy/: __init__.pyi  orm.pyi
backend/typings/tomllib/: __init__.pyi
frontend/: README.md  eslint.config.ts  package.json  vite.config.ts
frontend/src/api/: client.ts  index.ts
frontend/src/components/ai/: AiCodeBlock.vue  AiConversation.vue  AiError.vue  AiFilePreview.vue  AiImagePreview.vue  AiLoader.vue  AiMessage.vue  AiProcessingStep.vue  AiPromptInput.vue  AiResponse.vue  AiThinking.vue  AiToolCall.vue  index.ts
frontend/src/components/layout/: Sidebar.vue
frontend/src/components/ui/: AiIcon.vue  Avatar.vue  Badge.vue  Button.vue  Card.vue  Input.vue  ModelSelector.vue
frontend/src/composables/: useFileUpload.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  sessions.ts
frontend/src/types/: api.ts  chat.ts
frontend/src/utils/: cn.ts  markdown.ts  pdfConverter.ts
frontend/src/views/: AuthView.vue  ChatView.vue
proxy/: Cargo.toml  Dockerfile  config.toml
proxy/src/: main.rs  static_assets.rs
