[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = "4"
env_logger = "0.11"
http = "1"
httpdate = "1"
log = "0.4"
mime_guess = "2"
pingora = { version = "0.6", features = ["proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync", "time", "io-util"] }
toml = "0.9"
